# packages/api-client/openapi.json
@@ -961,8 +961,11 @@
       },
       "EventEnvelope_CheckInDeleted": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -991,8 +994,11 @@
       },
       "EventEnvelope_CheckInMarkedDone": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1021,8 +1027,11 @@
       },
       "EventEnvelope_CheckInMarkedSkipped": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1051,8 +1060,11 @@
       },
       "EventEnvelope_CheckInMoved": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1081,8 +1093,11 @@
       },
       "EventEnvelope_CheckInRecorded": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1111,8 +1126,11 @@
       },
       "EventEnvelope_HabitCreated": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1141,8 +1159,11 @@
       },
       "EventEnvelope_HabitDeleted": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1171,8 +1192,11 @@
       },
       "EventEnvelope_HabitDetailsEdited": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1201,8 +1225,11 @@
       },
       "EventEnvelope_HabitGoalCleared": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1231,8 +1258,11 @@
       },
       "EventEnvelope_HabitGoalDefined": {
         "required": [
-          "type",
-          "payload"
+          "id",
+          "payload",
+          "sequence",
+          "timestamp",
+          "type"
         ],
         "type": "object",
         "properties": {
@@ -1260,6 +1290,10 @@
         }
       },
       "EventsByEnvelope": {
+        "required": [
+          "events",
+          "id"
+        ],
         "type": "object",
         "properties": {
           "id": {
